# shardtown

./: .gitignore  _truncate_accounts.js  chatbot-knowledge.js  ecosystem.config.js  package-lock.json  package.json  presence.js  server.js  shardctl.sh
.claude/: launch.json  preview-server.js
.playwright-mcp/: page-2026-04-27T00-30-42-806Z.yml
Shard/: bot.js  sharder.js
ShardGuard/: bot.js  sharder.js
Shardtown/: bot.js  sharder.js
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
desktop-tauri/: .gitignore  README.md  RELEASE.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
desktop-tauri/src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: lib.rs  main.rs
lib/: adminDBRoutes.js  apns.js  customBotManager.js  security.js  shardCommands.js  shardInteractionHandlers.js  ticketDB.js  ticketHandlers.js  ticketManager.js  ticketRoutes.js
mobile-app-mockup/: index.html
scripts/: genkey.js  truncate_accounts.js
status-app/: MIGRATION-NOTES.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
support-app/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
test/: apns.test.js  security.test.js
ticket-app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
views/: admin-login.ejs  admin.ejs  dashboard.ejs  index.ejs  maintenance.html  (+5 more)
(+245 files in other folders)
