[package]
name = "shardtown-desktop"
version = "0.1.0"
description = "Native macOS dashboard for Shardtown"
authors = ["Shardtown"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "shardtown_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
