[package]
name = "shardtown-desktop"
version = "0.1.7"
description = "Native macOS dashboard for Shardtown"
authors = ["Shardtown"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "shardtown_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
discord-rich-presence = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
localauthentication-rs = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
